--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -54,13 +54,9 @@ jobs:
 
           echo runtime-version=${RUNTIME_VERSION} >> $GITHUB_OUTPUT
           echo runtime-patch=${RUNTIME_PATCH} >> $GITHUB_OUTPUT
-  build-linux:
+  build-linux-debug:
     runs-on: ubuntu-latest
     needs: env-variables
-    env:
-      RUNTIME_VERSION: ${{needs.env-variables.outputs.runtime-version}}
-      RUNTIME_PATCH: ${{needs.env-variables.outputs.runtime-patch}}
-      CODE_VERSION: ${{needs.env-variables.outputs.code-version}}
     container:
       image: mcr.microsoft.com/dotnet-buildtools/prereqs:centos-stream8
     steps:
@@ -68,36 +64,32 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{env.CODE_VERSION}}
-      - name: Build for Linux
-        run: ./build.sh -c Release /p:VersionSuffix=${{env.RUNTIME_PATCH}} /p:StabilizePackageVersion=false /p:OfficialBuildId=20201010.1 /p:NativeOptimizationDataSupported=false
-      - name : Download dotnet install scripts
-        run: wget https://dotnet.microsoft.com/download/dotnet/scripts/v1/dotnet-install.sh
-      - name: Retrieve official ASP.Net Core runtime
-        run: |
-          chmod u+x ./dotnet-install.sh
-          mkdir -p artifacts/packages/Release/Shipping/aspnetcore-runtime
-          ./dotnet-install.sh --runtime aspnetcore --version ${{env.RUNTIME_VERSION}} --os linux --install-dir artifacts/packages/Release/Shipping/aspnetcore-runtime
-      - name: Extract generated runtime artifact, add crossgen, symbols, and AspNetCore runtime
-        run: |
-          FULL_VERSION=${{env.RUNTIME_VERSION}}-${{env.RUNTIME_PATCH}}
-          cd artifacts/packages/Release/Shipping
-          mkdir -p dotnet-runtime
-          cd dotnet-runtime
-          tar -xzvf ../dotnet-runtime-${FULL_VERSION}-linux-x64.tar.gz
-          cd shared/Microsoft.NETCore.App/${FULL_VERSION}
-          tar -xzvf ../../../../dotnet-crossgen2-${FULL_VERSION}-linux-x64.tar.gz
-          tar -xzvf ../../../../dotnet-nethost-symbols-linux-x64-${FULL_VERSION}.tar.gz
-          cd ../../../..
-          cp -R aspnetcore-runtime/shared/Microsoft.AspNetCore.App dotnet-runtime/shared/Microsoft.AspNetCore.App
-          mv dotnet-runtime/shared/Microsoft.AspNetCore.App/${{env.RUNTIME_VERSION}} dotnet-runtime/shared/Microsoft.AspNetCore.App/${FULL_VERSION}
-          sed -i "s/${{env.RUNTIME_VERSION}}/${FULL_VERSION}/g" dotnet-runtime/shared/Microsoft.AspNetCore.App/${FULL_VERSION}/Microsoft.AspNetCore.App.runtimeconfig.json
-          cd dotnet-runtime
-          tar -zcvf ../aspnetcore-runtime-${FULL_VERSION}-linux-x64.tar.gz .
-      - name: Upload runtime artifact
-        uses: actions/upload-artifact@v4
+      - name: Build
+        uses: ./.github/actions/build-linux.yml
         with:
-          name: linux-runtime
-          path: artifacts/packages/Release/Shipping/aspnetcore-runtime-${{env.RUNTIME_VERSION}}-${{env.RUNTIME_PATCH}}-linux-x64.tar.gz
+          version-runtime: ${{needs.env-variables.outputs.runtime-version}}
+          version-patch: ${{needs.env-variables.outputs.runtime-patch}}
+          build-configuration: Release
+          output-artifact-name: 'linux-runtime-release'
+  build-linux-release:
+    runs-on: ubuntu-latest
+    needs: env-variables
+    container:
+      image: mcr.microsoft.com/dotnet-buildtools/prereqs:centos-stream8
+    steps:
+      - name: Check out runtime source code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{env.CODE_VERSION}}
+      - name: Build
+        uses: ./.github/actions/build-linux.yml
+        with:
+          version-runtime: ${{needs.env-variables.outputs.runtime-version}}
+          version-patch: ${{needs.env-variables.outputs.runtime-patch}}
+          build-configuration: Debug
+          output-artifact-name: 'linux-runtime-debug'
+          
+
   build-windows:
     runs-on: windows-latest
     needs: env-variables
@@ -121,7 +113,8 @@ jobs:
       RUNTIME_PATCH: ${{needs.env-variables.outputs.runtime-patch}}
     needs:
       - env-variables
-      - build-linux
+      - build-linux-debug
+      - build-linux-release
       - build-windows
     steps:
       - name: Download .Net runtime artifact
