--- a/.github/workflows/build-windos-test.yml
+++ b/.github/workflows/build-windos-test.yml
@@ -22,11 +22,11 @@ jobs:
       - name: Check out runtime source code
         uses: actions/checkout@v4
       - name: Build CLR for Windows
-        run: .\build.cmd -c Release /p:VersionSuffix=criteo1 /p:StabilizePackageVersion=false /p:OfficialBuildId=20201010.1 /p:NativeOptimizationDataSupported=false
+        run: .\build.cmd -c Debug /p:VersionSuffix=criteo1 /p:StabilizePackageVersion=false /p:OfficialBuildId=20201010.1 /p:NativeOptimizationDataSupported=false
       - name: List artifacts directory content
-        run: dir -Recurse artifacts\Packages\Release\Shipping
+        run: dir -Recurse artifacts\Packages\Debug\Shipping
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: windows-runtime
-          path: artifacts/packages/Release/Shipping/
+          path: artifacts/packages/Debug/Shipping/
