--- a/.github/workflows/aspnetcore-build.yml
+++ b/.github/workflows/aspnetcore-build.yml
@@ -30,4 +30,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: aspnetcore-runtime-debug
-        path: artifacts/packages/
+        path: artifacts/installers/
