--- a/.github/workflows/build-windos-test.yml
+++ b/.github/workflows/build-windos-test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Generate layout
         run: |
           cd src/tests
-          .\build.cmd -c Release -generatelayoutonly
+          .\build.cmd Release -generatelayoutonly
       - name: List tests generated directory
         run: dir -Recurse artifacts\tests\coreclr
       - name: Upload artifacts
