--- a/.github/workflows/build-windos-test.yml
+++ b/.github/workflows/build-windos-test.yml
@@ -22,9 +22,7 @@ jobs:
       - name: Check out runtime source code
         uses: actions/checkout@v4
       - name: Build CLR for Windows
-        run: .\build.cmd -c Release /p:VersionSuffix=criteo1 /p:StabilizePackageVersion=false /p:OfficialBuildId=20201010.1 /p:NativeOptimizationDataSupported=false /p:IncludeSymbols=true
-      - name: Publish artifacts
-        run: .\build.cmd -c Release -Pack -Publish
+        run: .\build.cmd -c Release -restore -build -pack -publish /p:VersionSuffix=criteo1 /p:StabilizePackageVersion=false /p:OfficialBuildId=20201010.1 /p:NativeOptimizationDataSupported=false /p:IncludeSymbols=true
       - name: Generate layout
         run: |
           cd src/tests
