--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
       - name: Test
         shell: bash
         run: |
+          echo $PATH
+          ls  -l -R /github/home/.dotnet/tools
           dotnet-symbol
     
     
