--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     container:
       image: mcr.microsoft.com/dotnet-buildtools/prereqs:centos-stream8
     env:
-      DOTNET_TOOLS_DIR: /github/home/.dotnet/tools
+      DOTNET_TOOLS_DIR: ~/.dotnet/tools
     steps:
       - name : Download dotnet install scripts
         shell: bash
