--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Test
         shell: bash
         run: |
+          DOTNET_HOME=$(cd dotnet-sdk ; pwd)
           ${{env.DOTNET_TOOLS_DIR}}/dotnet-symbol
     
     
