--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,12 +21,14 @@ jobs:
           mkdir -p dotnet-sdk
           ./dotnet-install.sh --os linux --install-dir dotnet-sdk
           chmod u+x dotnet-sdk/dotnet
+          dotnet new tool-manifest
           dotnet-sdk/dotnet tool install dotnet-symbol --local
       - name: Test
         shell: bash
         run: |
           DOTNET_ROOT=$(cd dotnet-sdk ; pwd)
-          dotnet-sdk/dotnet --list-runtimes
+          #dotnet-sdk/dotnet --list-runtimes
+          
           dotnet-sdk/dotnet tool list --local
           dotnet-sdk/dotnet run tool symbol *
     
